--- a/paginaContato.html
+++ b/paginaContato.html
@@ -8,7 +8,7 @@
 <body>
     <header class="cabecalho-pagina">
         <nav class="cabecalho-menu">
-            <a href="paginaApres.html" class="cabecalho-menu-item">Home</a>
+            <a href="index.html" class="cabecalho-menu-item">Home</a>
             <a href="paginaContato.html" class="cabecalho-menu-item">Contato</a>
             <a href="galeriaProjetos.html" class="cabecalho-menu-item">Projetos</a>
         </nav>
