--- a/galeriaProjetos.html
+++ b/galeriaProjetos.html
@@ -9,7 +9,7 @@
 <body>
     <header class="cabecalho-pagina">
         <nav class="cabecalho-menu">
-            <a href="paginaApres.html" class="cabecalho-menu-item">Home</a>
+            <a href="index.html" class="cabecalho-menu-item">Home</a>
             <a class="cabecalho-menu-item1">Projetos</a>
             <a href="paginaContato.html" class="cabecalho-menu-item">Contato</a>
         </nav>
