--- a/galeriaProjetos.html
+++ b/galeriaProjetos.html
@@ -66,5 +66,8 @@
             </table>
         </section>
     </main>
+    <footer>
+        <h3 class="direitos">© Todos os direitos reservados</h3>
+    </footer>
 </body>
 </html>
