--- a/paginaContato.html
+++ b/paginaContato.html
@@ -1,22 +1,39 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="styleContato.css">
     <title>paginaContato</title>
 </head>
 <body>
     <header class="cabecalho-pagina">
         <nav class="cabecalho-menu">
             <a href="index.html" class="cabecalho-menu-item">Home</a>
-            <a href="paginaContato.html" class="cabecalho-menu-item">Contato</a>
             <a href="galeriaProjetos.html" class="cabecalho-menu-item">Projetos</a>
+            <a class="cabecalho-menu-item1">Contato</a>
         </nav>
     </header>
-    
-    <iframe
-    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d493.8025837058172!2d-34.8700605!3d-8.0585008!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7ab1f3bbd78bf9f%3A0xa5acd8a40be92c7f!2sDeloitte%20Brasil%20%7C%20Auditoria%20e%20Consultoria%20Empresarial!5e0!3m2!1spt-BR!2sbr!4v1728268328630!5m2!1spt-BR!2sbr"
-    width="400" height="300" style="border:0;" allowfullscreen="yes" loading="lazy"
-    referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <main id="principal">
+        <div id="seção1">
+        <article>
+            <img id="iconeContato" src="linkedIn_logo.png" alt="Meu LinkedIn" width="240px">
+            <p id="cabecalho_linkedin" href="https://www.linkedin.com/in/paulorpb/">Meu perfil no LinkedIn</p>
+            <img id="iconeContato" src="instagram_logo.png" alt="Meu instagram" width="200px">
+            <p id="cabecalho_Insta">Meu perfil no instagram</p>
+            <img id="iconeContato" src="gmail_logo.png" alt="meu Gmail" width="180px">
+            <p id="cabecalho_gmail">Aqui você me envia um e-mail</p><br>
+            <iframe id="mapa"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d493.8025837058172!2d-34.8700605!3d-8.0585008!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7ab1f3bbd78bf9f%3A0xa5acd8a40be92c7f!2sDeloitte%20Brasil%20%7C%20Auditoria%20e%20Consultoria%20Empresarial!5e0!3m2!1spt-BR!2sbr!4v1728268328630!5m2!1spt-BR!2sbr"
+            width="350" height="300" style="border:0;" allowfullscreen="yes" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </article>
+        </div>
+    </main>
+    <footer>
+        <h3 class="direitos">© Todos os direitos reservados</h3>
+    </footer>
 </body>
+
 </html>
