--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <h2 class="conteudo-subtitulo">Sobre mim</h2>
                 <p class="texto-apresentacao">Prazer! Me chamo Paulo, tenho 30 anos e sou estudante de Análise e
                     Desenvolvimento de Sistemas.<br>
-                    Possuo formação em: Técnico em administração pelo SENAI (2011), um Bacharelado em administração pela
+                    Possuo formação em Técnico em administração pelo SENAI (2011), um Bacharelado em administração pela
                     UFPE (2019) e Técnico em desenvolvimento de sistemas pela ETE Porto Digital (2023).<br>
                     Tenho mais de 10 anos de atuação no mercado de trabalho, tendo realizado as mais diversas
                     atividades.<br>
@@ -37,7 +37,7 @@
                 </p>
             </div>
         </section>
-        
+    </main>
         <footer>
             <h3 class="direitos">© Todos os direitos reservados</h3>
         </footer>
